--- a/Scrambled Net/res/menu/main_menu.xml
+++ b/Scrambled Net/res/menu/main_menu.xml
@@ -10,6 +10,10 @@
     <item android:id="@+id/menu_pause" android:title="@string/menu_game_pause" 
     	  android:icon="@drawable/ic_menu_pause"/>
 
+    <!-- "High scores". -->
+    <item android:id="@+id/menu_scores" android:title="@string/menu_show_scores" 
+    	  android:icon="@drawable/ic_menu_show_list"/>
+
      <!-- "Set skill level...". -->
     <item android:id="@+id/skill_menu" android:title="@string/menu_set_skill"
     	  android:icon="@drawable/ic_menu_preferences">
