--- a/Scrambled Net Full/res/layout/score_layout.xml
+++ b/Scrambled Net Full/res/layout/score_layout.xml
@@ -1,29 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	android:id="@+id/scoreTable" android:stretchColumns="*">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+		android:id="@+id/LinearLayout01"
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:background="@drawable/scores_bg"
+		android:paddingBottom="84px"
+		android:paddingLeft="50px"
+		android:paddingRight="50px"
+		android:paddingTop="140px" android:orientation="vertical">
 
-	<TableRow android:id="@+id/headerRow"
+	<TableLayout android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:stretchColumns="*" android:id="@+id/timeTable" android:layout_weight="1">
+		
+		<TableRow android:id="@+id/headerRow"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content" >
 		
-		<TextView android:id="@+id/labelSkill"
+			<TextView android:id="@+id/labelSkill"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="@string/scores_skill" android:textSize="18dp" android:textColor="#ffffffff" android:textStyle="bold" android:typeface="normal"/>
+				android:text="@string/scores_skill" android:textStyle="bold" android:typeface="normal" android:textSize="16dp" android:textColor="#ff000000"/>
 		
-		<TextView android:id="@+id/labelClicks"
+			<TextView android:id="@+id/labelClicks"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="@string/scores_clicks" android:textSize="18dp" android:textStyle="bold" android:typeface="normal" android:textColor="#ffffffff"/>
+				android:text="@string/scores_clicks" android:textStyle="bold" android:typeface="normal" android:textColor="#ff000000" android:textSize="16dp"/>
 		
-		<TextView android:id="@+id/labelTime"
-				android:layout_width="wrap_content"
+			<TextView android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="@string/scores_time" android:textSize="18dp" android:textColor="#ffffffff" android:typeface="normal" android:textStyle="bold"/>
+				android:typeface="normal" android:textStyle="bold" android:textColor="#ff000000" android:textSize="16dp" android:id="@+id/labelWhen" android:text="@string/scores_when"/>
 			
-	</TableRow>
-	
-</TableLayout>
+		</TableRow>
 
+	</TableLayout>
+
+	<TableLayout android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:stretchColumns="*" android:id="@+id/clicksTable" android:layout_weight="1">
+		
+		<TableRow android:id="@+id/headerRow"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content" >
+		
+			<TextView android:id="@+id/labelSkill"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/scores_skill" android:textStyle="bold" android:typeface="normal" android:textSize="16dp" android:textColor="#ff000000"/>
+		
+			<TextView android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textStyle="bold" android:typeface="normal" android:textColor="#ff000000" android:textSize="16dp" android:id="@+id/labelTime" android:text="@string/scores_time"/>
+		
+			<TextView android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:typeface="normal" android:textStyle="bold" android:textColor="#ff000000" android:textSize="16dp" android:id="@+id/labelWhen" android:text="@string/scores_when"/>
+			
+		</TableRow>
+
+	</TableLayout>
+
+</LinearLayout>
