--- a/Scrambled Net Full/res/layout-long-port/score_layout.xml
+++ b/Scrambled Net Full/res/layout-long-port/score_layout.xml
@@ -5,18 +5,27 @@
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		android:background="@drawable/scores_bg"
-		android:paddingBottom="84px"
-		android:paddingLeft="50px"
-		android:paddingRight="50px"
-		android:paddingTop="140px" android:orientation="vertical">
+		android:orientation="vertical" android:paddingTop="90dp" android:paddingBottom="50dp" android:paddingLeft="30dp" android:paddingRight="30dp">
 
 	<TableLayout android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		android:stretchColumns="*" android:id="@+id/timeTable" android:layout_weight="1">
+				
+		<TableRow android:id="@+id/titleRow"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content" >
+			<TextView android:id="@+id/labelTitle"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_span="3"
+					android:textStyle="bold"
+					android:textSize="20dp"
+					android:textColor="#ff000000" android:gravity="center" android:typeface="serif" android:text="@string/scores_clickstitle"/>
+		</TableRow>
 		
 		<TableRow android:id="@+id/headerRow"
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content" >
+			android:layout_height="wrap_content" android:layout_marginTop="8dp">
 		
 			<TextView android:id="@+id/labelSkill"
 				android:layout_width="wrap_content"
@@ -38,11 +47,23 @@
 
 	<TableLayout android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
-		android:stretchColumns="*" android:id="@+id/clicksTable" android:layout_weight="1">
+		android:stretchColumns="*" android:id="@+id/clicksTable" android:layout_weight="1" android:layout_marginTop="14dp">
+				
+		<TableRow android:id="@+id/titleRow"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content" >
+			<TextView android:id="@+id/labelTitle"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_span="3"
+					android:textStyle="bold"
+					android:textSize="20dp"
+					android:textColor="#ff000000" android:gravity="center" android:typeface="serif" android:text="@string/scores_timestitle"/>
+		</TableRow>
 		
 		<TableRow android:id="@+id/headerRow"
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content" >
+			android:layout_height="wrap_content" android:layout_marginTop="8dp">
 		
 			<TextView android:id="@+id/labelSkill"
 				android:layout_width="wrap_content"
