--- a/Scrambled Net Full/res/values/arrays.xml
+++ b/Scrambled Net Full/res/values/arrays.xml
@@ -80,7 +80,8 @@ to get back to the game.\n\
 a new game at that skill level.\n\
 • <b>Solve it!</b> runs an autosolver to finish the current puzzle for you.
 If you get completely stuck, you can use this to see the solution — but
-you won\'t get personal best credit!\n\
+you won\'t get personal best credit!  While solving, this menu item
+changes to a \"Stop\" button, so you can stop the autosolver at any time.\n\
 • <b>Sound</b> lets you set your preferred sound effects level.  However,
 the sound effects volume can always be adjusted in the game using the hardware
 volume keys.  If no sound is coming out, try turning up the volume using
