--- a/Audalyzer/res/values/arrays.xml
+++ b/Audalyzer/res/values/arrays.xml
@@ -29,6 +29,7 @@
     <!-- Values for the block size menu. -->
     <string-array name="prefs_block_values">
         <item>128</item>  
+        <item>256</item>  
         <item>512</item>
         <item>1024</item>
     </string-array>
