--- a/Substrate/res/xml/substrate.xml
+++ b/Substrate/res/xml/substrate.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <wallpaper xmlns:android="http://schemas.android.com/apk/res/android"
-		android:thumbnail="@drawable/icon"
+		android:thumbnail="@drawable/preview"
 		android:author="@string/app_author"
 		android:description="@string/app_desc"
         android:settingsActivity="org.hermit.substrate.SubstratePreferences" />
