--- a/Substrate/res/xml/substrate.xml
+++ b/Substrate/res/xml/substrate.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <wallpaper xmlns:android="http://schemas.android.com/apk/res/android"
-		android:thumbnail="@drawable/preview"
-		android:author="@string/app_author"
-		android:description="@string/app_desc"
+		android:thumbnail="@drawable/substrate_preview"
+		android:author="@string/substrate_author"
+		android:description="@string/substrate_desc"
         android:settingsActivity="org.hermit.substrate.SubstratePreferences" />
 
