Substrate: preferences cleaned up.

--- a/Substrate/res/values/arrays.xml
+++ b/Substrate/res/values/arrays.xml
@@ -2,13 +2,13 @@
 
 <resources>
     
+    <!-- Substrate Preferences. -->
+    
     <!-- Entry names for the run time menu. -->
     <string-array name="substrate_prefs_cycles_entries">
-        <item>Very short</item>
         <item>Short</item>
         <item>Medium</item>
         <item>Long</item>
-        <item>Very long</item>
     </string-array>
 
     <!-- Values for the run time menu. -->
@@ -16,8 +16,6 @@
         <item>3000</item>  
         <item>6000</item>
         <item>10000</item>
-        <item>15000</item>
-        <item>20000</item>
     </string-array>
       
     <!-- Entry names for the number of cracks menu. -->
@@ -47,6 +45,64 @@
         <item>50</item>
         <item>100</item>
     </string-array>
+     
+    <!-- Interaggregate Preferences. -->
+       
+    <!-- Entry names for the run time menu. -->
+    <string-array name="interaggregate_prefs_cycles_entries">
+        <item>Short</item>
+        <item>Medium</item>
+        <item>Long</item>
+    </string-array>
+
+    <!-- Values for the run time menu. -->
+    <string-array name="interaggregate_prefs_cycles_values">
+        <item>2000</item>  
+        <item>4000</item>  
+        <item>6000</item>
+    </string-array>
+      
+    <!-- Entry names for the number of discs menu. -->
+    <string-array name="interaggregate_prefs_discs_entries">
+        <item>Few</item>
+        <item>Medium</item>
+        <item>Lots</item>
+    </string-array>
+
+    <!-- Values for the number of discs menu. -->
+    <string-array name="interaggregate_prefs_discs_values">
+        <item>40</item>  
+        <item>70</item>
+        <item>100</item>
+    </string-array>
+      
+    <!-- Entry names for the disc sizes menu. -->
+    <string-array name="interaggregate_prefs_dsize_entries">
+        <item>Small</item>
+        <item>Medium</item>
+        <item>Large</item>
+    </string-array>
+
+    <!-- Values for the disc sizes menu. -->
+    <string-array name="interaggregate_prefs_dsize_values">
+        <item>100</item>  
+        <item>300</item>
+        <item>600</item>
+    </string-array>
     
+    <!-- Entry names for the sand menu. -->
+    <string-array name="interaggregate_prefs_sand_entries">
+        <item>Little</item>
+        <item>Medium</item>
+        <item>Lots</item>
+    </string-array>
+
+    <!-- Values for the sand menu. -->
+    <string-array name="interaggregate_prefs_sand_values">
+        <item>20</item>  
+        <item>50</item>
+        <item>100</item>
+    </string-array>
+   
 </resources>
 
