--- a/Substrate/res/xml/substrate_settings.xml
+++ b/Substrate/res/xml/substrate_settings.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        android:title="@string/substrate_settings"
-        android:key="substrate_settings">
+        android:title="@string/substrate_settings" >
 
     <ListPreference
             android:key="maxCycles"
