--- a/Substrate/res/values/arrays.xml
+++ b/Substrate/res/values/arrays.xml
@@ -176,6 +176,206 @@
         <item>20</item>
         <item>40</item>
     </string-array>
+     
+         
+    <!-- ################################################################# -->
+    <!-- Help.                                            -->
+    <!-- ################################################################# -->
 
+    <!-- Help section titles. -->
+    <string-array name="help_titles">
+		<item>Introduction</item>
+		<item>Display</item>
+		<item>Interpreting</item>
+		<item>Menu</item>
+		<item>Settings</item>  
+		<item>@array/help_prefs_titles</item>
+		<item>More Information</item>
+		<item>@array/help_info_titles</item>
+    </string-array>
+
+    <!-- Help section texts. -->
+    <string-array name="help_texts">
+    
+<item>This is a simple audio analyser for Android. It displays sound
+readings from the microphone as a waveform display, as a
+frequency spectrum, and as a dB meter. dB levels are relative
+to the maximum input level of your device.\n\
+\n\
+Since microphone sensitivity varies between individual devices,
+let alone models, it\'s impossible to generate accurate sound
+level readings with this app; so all data should be taken
+with a pinch of salt.  Still, it may be interesting when used
+to compare sound readings at different locations.</item>
+			  
+<item>The display shows an analysis of the local acoustic environment.  The
+first section shows a waveform display of the sound picked up by the
+microphone; this display auto-scales to handle a wide range of sound levels.\n\
+\n\
+Below this a frequency spectrum is displayed.  The horizontal scale shows the
+frequencies displayed; the maximum frequency will depend on the selected
+sampling rate (see \"Settings\").  The vertical scale is logarithmic, with
+a range from -60dB to 0dB.  Scale lines are drawn every 10dB.\n\
+\n\
+The third section displays the absolute power level of the sound as received
+by the device\'s microphone.  This is displayed as decibels (dB) relative
+to the maximum possible input from the microphone; so 0dB is the maximum
+the device can register, -10dB is 1/10th of this, -20dB is 1/100th of the
+max, etc.  Each 10 dB multiplies or divides the level by 10.\n\
+\n\
+The power meter also shows peak markers, and
+a background bar displays a rolling average.  The rolling average is also
+displayed numerically.</item>
+			  
+<item>The dB Meter shows the noise level, as received by the audio input
+device, on a logarithmic scale, relative to the maximum audio level the
+device can process.  So the maximum possible input is 0dB; and every 10dB
+below this represents a reduction by a factor of 10.  Hence, -20dB represents
+a signal 1,000 times as powerful as -50dB.\n\
+\n\
+Since every device\'s microphone has different sensitivity, there\'s no way to
+relate this to actual noise levels.\n\
+\n\
+In practice, this means that:\n\
+• Full-on noise, totally distorting the input, should register 0dB.\n\
+• It\'s very hard to get this in practice.  However, traffic noise on the
+Golden Gate Bridge peaked up to 1dB.\n\
+• A pure tone at the maximum non-distorting level is about -2.41dB.\n\
+• A miniscule, almost-not-there signal would be -100dB.  However, due to
+electrical noise inside the device, it\'s about impossible in practice to get
+close to this.\n\
+• With my Droid in a soundproof chamber I got a reading of
+-68.4dB, so that\'s a realistic representation of what \"very quiet\" would
+register as.\n\
+\n\
+The spectrum analyser also displays a log scale.  Here, the output range tends
+to be more limited, so we display levels down to -60dB from the maximum.</item>
+              
+<item>The device\'s \"menu\" button pops up a menu containing a number
+of options:\n\
+• <b>Settings</b> takes you to the settings screen; see \"Settings\" below.\n\
+• <b>Help</b> displays this help.\n\
+• <b>About</b> displays an about box, with links to the license and
+the project home page.\n\
+• <b>Disclaimer</b> re-displays the one-time warning screen.\n\
+• <b>Exit</b> stops the application.</item>
+              
+<item>Audalyzer has a number of user-configurable options in its Settings
+screen.  This screen is reached through the menu, as described under \"Menu\"
+above.  The available settings are detailed in the following sections.</item>
+
+<item>@array/help_prefs_texts</item>
+
+<item>If you would like more information and help with Audalyzer, or if you
+want to to report a bug, there are some on-line
+resources which may be of interest, as described in the following
+sections.</item>
+
+<item>@array/help_info_texts</item>
+
+    </string-array>
+        
+        
+    <!-- Section titles for the settings help. -->
+    <string-array name="help_prefs_titles">
+
+<item>Audio Analysis</item>
+
+<item>Display</item>
+
+<item>Debug</item>
+
+    </string-array>
+
+    <!-- Section contents for the screens help. -->
+    <string-array name="help_prefs_texts">
+
+<item><b>Sample rate</b> sets the audio sampling rate in samples/second.  A
+higher rate will require more processing power.  The
+frequency range of the spectrum analyser is half the sample rate;
+this frequency range is displayed alongside the sample rate.\n\
+\n\
+<b>Block size</b> sets the size in samples of the data block processed
+by the spectrum analyser.  A larger block size provides finer frequency
+resolution but with more delay and more processing power required.\n\
+\n\
+<b>Decimation</b> reduces the processing workload by only analysing a subset
+of the input data blocks.\n\
+\n\
+<b>Histogram averaging</b> sets the averaging interval of the spectrum analyser.
+\"None\" tells it to display instantaneous values; \"Fast\" displays the rolling
+average over a few samples; and \"Slow\" displays a longer-term rolling
+average.</item>
+
+<item><b>Screen orientation</b> determines whether and how the application
+will switch its display between portrait and landscape:\n\
+• <b>System default</b> -- the system will determine the orientation based
+on the task context.\n\
+• <b>Portrait</b> -- lock to portrait mode.\n\
+• <b>Landscape</b> -- lock to landscape mode.\n\
+• <b>User preference</b> -- the app will switch orientation according to
+the global device settings.\n\
+• <b>Device orientation</b> -- follow the physical orientation of the device.\n\
+\n\
+<b>Keep device awake</b> tells the application to keep the screen active
+until the user manually leaves the application.  This is useful if you want
+to set Audalyzer up to continually display your sound level over a long
+period; however, be aware that it will quickly drain your battery.</item>
+
+<item><b>Show performance stats</b> tells Audalyzer to display certain
+performance statistics on-screen.  These stats are updated every 5
+seconds and include frames per second, computation time, drawing time, and
+the average time taken to perform frequency analysis (FFT) of a block of
+data.</item>
+
+    </string-array>
+          
+    <!-- Section titles for the more info help. -->
+    <string-array name="help_info_titles">
+
+<item>Discussion Groups</item>
+
+<item>Reporting Bugs</item>
+
+<item>Join In</item>
+
+    </string-array>
+
+    <!-- Section contents for the more info help. -->
+    <string-array name="help_info_texts">
+
+<item>There is a discussion board where you
+can suggest ideas for Audalyzer, share experiences and thoughts with
+other users, and generally waffle.  Please note that this group
+is shared with the other Moonblink projects, so mention
+Audalyzer when you post:\n\
+\n\
+• http://groups.google.com/group/moonblink/topics</item>
+
+<item>If you want to report a bug, you can use the Moonblink Issue tracker.
+Before you post, <b>please</b> look through the existing issues -- including
+closed issues -- before raising a new one.  Your problem may already have been
+solved.\n\
+\n\
+If you do need to raise a new issue:\n\
+• The issue tracker is used by a number of projects.  Please click on the
+\"Product-\" label to set the product you are reporting against.  You can
+also set the other fields as appropriate.\n\
+• Please tell me what device, and what version of Android, you are using.\n\
+• If the bug is a crash, then please attach a log if you possibly can.
+If you don\'t know how, don\'t sweat it.\n\
+\n\
+So, the issue tracker is here:\n\
+\n\
+• http://code.google.com/p/moonblink/issues/list</item>
+
+<item>Audalyzer is an open project, so if you
+want to join in and make contributions, you can.  See the project page for
+information:\n\
+\n\
+• http://code.google.com/p/moonblink/wiki/Audalyzer</item>
+
+    </string-array>
+    
 </resources>
 
